--- a/styles/modal.css
+++ b/styles/modal.css
@@ -22,48 +22,36 @@ html.noscroll {
     opacity: 0.6;
 }
 
-
-[data-modal="true"]:not(.display) { display: none; }
-[data-modal="true"].display { display: block; }
-
-[data-modal="true"].float.right {
-    float: right; 
-    margin: 0 0 20px 20px;
-}
-
-[data-modal="true"].float.left {
-    float: left; 
-    margin: 0 20px 20px 0;
-}
-
-[data-modal="true"].fixed { position: fixed; }
-
-.modal,
-.shadow {
-    /* Valeur encart par défaut si pas surchargé via attribut DOM 'data-*' */
-    position: absolute;
-    width: 300px; 
-}
-
-.modal {
+[data-modal="true"] { 
+    position: relative; 
     background-color: #efefef;
     color:#8d8c8c;
 }
+[data-modal="true"]:not(.display) { display: none; }
+[data-modal="true"].display { display: block; }
+[data-modal="true"].float.right { float: right; }
+[data-modal="true"].float.left { float: left; }
+[data-modal="true"].fixed { position: fixed; }
 
-.shadow.visible {
-    border: dashed 4px gray;
-    box-sizing: border-box;
+[data-modal="true"].setShadow { background: none !important; } 
+[data-modal="true"].setShadow > *:not(.shadow) { opacity: 0 !important; }
+
+
+[data-modal="true"] .shadow {
+    position: absolute;
+    background-color: rgba(0,0,0,0.1);
+    /* width: 100%;
+    height: 100%; */
+    width: calc(100% - 6px);
+    height: calc(100% - 6px);
+    border: 3px dashed #777777;
 }
 
-
-.TexteInfoFocus	{
+[data-modal="true"] .TexteInfoFocus	{
 	font-size: 14px;
 	line-height: 20px;
     text-align: center;
     padding: 25px;
-    /*border: solid 15px #ffffff;*/
-    
-    /*max-height:190px;/*300px de max-height - 2*40px de padding vertical - 2*15px de border*/
     /* Juste pour IE */
 	scrollbar-face-color: #f6f6f6;
 	scrollbar-track-color: #f9f9f9;
@@ -73,51 +61,40 @@ html.noscroll {
 	scrollbar-3dlight-color: #b7b7b7;
 	scrollbar-darkshadow-color: #c5c5c5;	
 }
-.TexteInfoFocusContenu { 
+[data-modal="true"] .TexteInfoFocusContenu {
     overflow: inherit; /* ?? */
+    max-height: none;
 }
-.TexteInfoFocusContenu a {
+
+[data-modal="true"] .TexteInfoFocusContenu a {
     color: #707070;
 	text-decoration: underline;
 }
 
-.linkToRedimModal{
+[data-modal="true"] .linkToRedimModal{
 	color:#909090;
 	text-decoration: underline;
-    cursor:pointer;
+    cursor: pointer;
     display: inline-block;
     margin-top: 10px;
 }
-.linkToRedimModal:hover,
-.TexteInfoFocusContenu a:hover {
+[data-modal="true"] .linkToRedimModal:hover,
+[data-modal="true"] .TexteInfoFocusContenu a:hover {
 	color:#d80000;
 }
 
-#closeShortMsg {
+[data-modal="true"] #closeShortMsg {
 	position:absolute;
 	cursor: pointer;
 	top:15px;
     right:15px;
 }
-            
-#clone_modal {
-    position: fixed;
-    z-index:10001;
-    margin-top: auto;
-    width: 30%;
-    min-width: 100px;
-    height:auto;
-    /*max-height:70%;*/max-height:none;
-    -webkit-box-shadow: 0 0 15px 0 #444444;
-    -moz-box-shadow: 0 0 15px 0 #444444;
-    box-shadow: 0 0 15px 0 #444444;
+[data-modal="true"] #closeShortMsg.hidden { 
+    opacity: 0; 
+    cursor: default; 
 }
 
-.modal .TexteInfoFocusContenu {
-    max-height: none;
-}
-
-.modal #IconeResizeSmall {
+[data-modal="true"] #IconeResizeSmall {
     cursor: pointer;
     height: 15px;
     width: 15px;
@@ -127,16 +104,36 @@ html.noscroll {
     z-index: 3;
     transition: all 0.15s ease-in-out;
 }
-.modal #IconeResizeSmall:hover {
+[data-modal="true"] #IconeResizeSmall:hover {
     transform: scale(1.2);
 }
 
-.modal.transition :not(.Hidden) {
+[data-modal="true"].transition :not(.Hidden) {
     transition: all 0.2s ease-in-out;
 } 
-.modal.Hidden,
-.modal .Hidden  {
+[data-modal="true"].Hidden,
+[data-modal="true"] .Hidden  {
     filter:alpha(opacity=0);
 	-moz-opacity:0;
     opacity:0;
+}
+
+            
+#clone_modal {
+    position: fixed;
+    z-index:10001;
+    margin-top: auto;
+    width: 30%;
+    min-width: 100px;
+    height: auto;
+    max-height: none;
+    -webkit-box-shadow: 0 0 15px 0 #444444;
+    -moz-box-shadow: 0 0 15px 0 #444444;
+    box-shadow: 0 0 15px 0 #444444;
+    display: block;
+}
+#clone_modal.setCentralPosition {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
